fix the overflow

--- a/style.css
+++ b/style.css
@@ -435,6 +435,7 @@ h3 {
     width: 100vw;
     margin: 0 ;
     box-shadow: 0px 0px var(--black);
+    overflow-x: hidden;
   }
    .resume .base .contact div i{
     margin-right: 5px;
